# relay-plus

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 20260329143000_init.sql
backend/src/: config.rs  domain.rs  error.rs  lib.rs  main.rs  state.rs  store.rs
backend/src/handlers/: environments.rs  mod.rs  organizations.rs  threads.rs
backend/src/services/: codex.rs  fs.rs  mod.rs
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/design-system/: page.tsx
frontend/src/app/thread/[threadId]/: page.tsx
frontend/src/components/: app-shell.tsx  dashboard.tsx  design-system-showcase.tsx  thread-workspace.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  command-bar.tsx  input.tsx  modal.tsx  multi-select.tsx  panel.tsx  select.tsx  table.tsx  tabs.tsx  textarea.tsx
frontend/src/lib/: api.ts  app-context.tsx  types.ts  utils.ts
scripts/: dev.sh
